# notdiamond-examples

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
.streamlit/: build.sh  config.toml
notdiamond_examples/streamlit/: main.py
notdiamond_examples/streamlit/rag/: app.py  scraping.py
