[tool.poetry]
name = "notdiamond-examples"
version = "0.1.0"
description = "Various examples for using Not Diamond to route model prompts."
authors = ["Alejandro Companioni <a9@notdiamond.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notdiamond = {extras = ["create"], version = "^0.3.14"}
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
