[tool.poetry]
name = "notdiamond-examples"
version = "0.1.0"
description = "Various examples for using Not Diamond to route model prompts."
authors = ["Alejandro Companioni <a9@notdiamond.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.13"
notdiamond = { extras = ["create"], version = "^0.4.2" }
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.rag.dependencies]
haystack-ai = "^2.3.0"
langdetect = "^1.0.9"
more-itertools = "^10.5.0"
anthropic-haystack = "^1.0.0"
posthog = "^3.6.5"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
streamlit-javascript = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
